--- a/style.css
+++ b/style.css
@@ -160,11 +160,12 @@ body {
 .card__title {
   margin-top: 5px;
   margin-bottom: 10px;
+  padding-right: 40px;
   font-family: "Roboto Slab", serif;
 }
 
 .card__by {
-  font-size: 12px;
+  font-size: 14px;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
 }
