--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@ body {
 .cards {
   width: 100%;
   display: flex;
-  padding: 30px;
+  padding: 30px 0px;
   display: -webkit-flex;
   justify-content: center;
   -webkit-justify-content: center;
-  max-width: 90vw;
+  max-width: 80vw;
 }
 
 .card--1 .card__img,
@@ -100,7 +100,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 235px;
+  height: 150px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
 }
@@ -120,7 +120,7 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   position: absolute;
-  height: 235px;
+  height: 200px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   top: 0;
@@ -151,7 +151,7 @@ body {
 .card__category {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 10px;
   letter-spacing: 2px;
   font-weight: 500;
   color: #868686;
@@ -165,7 +165,7 @@ body {
 }
 
 .card__by {
-  font-size: 14px;
+  font-size: 13px;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
 }
